--- a/test/less 1 sololean.ipynb
+++ b/test/less 1 sololean.ipynb
@@ -57,7 +57,7 @@
     "print(\"безум\" + \"ная\")\n",
     "print(\"\\\"test\\\"\") # экранирование кавычек \n",
     "print(\"full\\t \\n out \")\n",
-    "print(\"\"\"Test perenos\"\"\") # новая строка за счет тройных кавычек, но почему то не сработало\n",
+    "print(\"\"\"Test     perenos\"\"\") # новая строка за счет тройных кавычек, но почему то не сработало\n",
     "print(\"Test perenos\")\n",
     "print(\"one\\n Two\\n free\\n\")\n",
     "print(\"help\\n\" * 4)\n",
@@ -188,26 +188,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-b04b37d137b3>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-17-b04b37d137b3>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    print(y:= y+= 5)\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Walrus := оператор присвоения\n",
     "\n",
     "print(x:= int(input(\"Введите число: \")))\n",
-    "print(y:= y+= 5)\n",
+    "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test        perenos\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
